--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 body {
   height: 100vh;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .background-buildings, .foreground-buildings {
@@ -26,7 +26,7 @@ body {
   align-items: flex-end;
   justify-content: space-evenly;
   position: absolute;
-  top: 0;
+  top: 170px;
 }
 
 /* BACKGROUND BUILDINGS */
@@ -162,4 +162,85 @@ body {
 
 .fb6:hover{ 
   transform: rotate(0.5turn); 
+}
+
+
+/* Penguin */
+.penguin-rouge{
+  width: 100%; 
+  height: 350px; 
+  background: linear-gradient(45deg, purple, red); 
+  padding: 0; 
+  overflow: hidden; 
+}
+
+.ground{
+  width: 100vw; 
+  height: 175px; 
+  background: linear-gradient(90deg, rgb(79, 0, 79), rgb(170, 7, 7)); 
+  position: absolute; 
+  z-index: 3; 
+  margin-top: -47px;
+}
+
+.penguin{
+  width: 180px; 
+  height: 175px; 
+  margin-right: auto; 
+  margin-left: auto; 
+  margin-top: 45px; 
+  z-index: 4; 
+  position: relative; 
+}
+
+.left-mountain{
+  width: 150px; 
+  height: 170px; 
+  background: linear-gradient(rgb(171, 7, 147), rgb(94, 4, 94) 45%); 
+  position: absolute; 
+  transform: skew(0deg, 44deg); 
+  z-index: 2; 
+  margin-top: 100px; 
+}
+
+.back-mountain{
+  width: 150px; 
+  height: 170px; 
+  background: linear-gradient(rgb(171, 7, 147), rgb(94, 4, 94) 45%); 
+  position: absolute; 
+  z-index: 1; 
+  transform: rotate(45deg); 
+  left: 60px; 
+  top: 100px; 
+}
+
+.moon{
+  width: 100px; 
+  height: 100px; 
+  position: absolute; 
+  background: linear-gradient(rgb(218, 217, 217), grey); 
+  border-radius: 50%; 
+  top: 10px; 
+}
+
+.penguin *{
+  position: absolute; 
+}
+
+.penguin-head{
+  width: 50%; 
+  height: 45%; 
+  background: linear-gradient(45deg, gray, rgb(239, 240, 228));
+  border-radius: 70% 70% 65% 65%;   
+  top: 10%; 
+  left: 25%; 
+}
+
+.penguin-body{
+  width: 53%; 
+  height: 45%; 
+  background: linear-gradient(45deg, rgb(134, 133, 133) 0%, rgb(234, 231, 231) 40%, white 67%); 
+  border-radius: 80% 80% 100% 100%; 
+  top: 40%; 
+  left: 23.5%; 
 }
